# loop-lang

./: Makefile  README.md  looplang.py  pyproject.toml
.github/workflows/: create-release.yml
examples/: add1.loop  error.loop  extended.loop  factorial.loop  failed_recursion.loop  rem.loop  simple.loop  strict.loop
src/looplang/: __init__.py  __main__.py
tests/: test_looplang.py
