[tool.poetry]
name = "loop-lang"
version = "0.2.0"
description = "Implementation of the LOOP programming language"
authors = ["Stephen Leach <sfkleach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pushable = "^0.1.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
